8153172: aarch64: hotspot crashes after the 8.1 LSE patch is merged

Fix scratch register usage in C1 atomic_op to avoid unpredictable instruction

Reviewed-by: aph